gitops/cluster-apps/avelin/api/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avelin-api
  namespace: avelin
  labels:
    app: avelin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avelin-api
  template:
    metadata:
      labels:
        app: avelin-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: avelin-api
          image: ghcr.io/avelinapp/api:v0.17.8
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              protocol: TCP
