gitops/cluster-apps/avelin/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avelin-api-ingress
  labels:
    app: avelin-api
spec:
  rules:
    - host: api.avelin.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: avelin-api-svc
                port:
                  name: http
